build: Run phplint for inc files
Change-Id: I0f4f2b339ba7ee34307ae4a9600d6e1e21c3ac66

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
 			"minus-x fix ."
 		],
 		"test": [
-			"parallel-lint . --exclude vendor --exclude node_modules",
+			"parallel-lint . --exclude vendor --exclude node_modules -e php,inc",
 			"phpcs -p -s",
 			"minus-x check ."
 		]
