--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
 	"private": true,
 	"devDependencies": {
+		"eslint-config-wikimedia": "0.11.0",
 		"grunt": "1.0.3",
 		"grunt-banana-checker": "0.6.0",
-		"grunt-contrib-jshint": "1.1.0",
+		"grunt-eslint": "21.0.0",
 		"grunt-jsonlint": "1.1.0",
 		"grunt-stylelint": "0.9.0",
 		"stylelint": "8.2.0",
