--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,13 +2,10 @@
 	"root": true,
 	"extends": [
 		"wikimedia/client",
-		"wikimedia/jquery"
+		"wikimedia/jquery",
+		"wikimedia/mediawiki"
 	],
-	"globals": {
-		"mw": "readable"
-	},
 	"rules": {
-		"no-jquery/no-global-selector": "off",
-		"no-jquery/variable-pattern": "off"
+		"no-jquery/no-global-selector": "off"
 	}
 }
