Add TranslationParser for parsing content for import
In preparation to import translated content for an election the TranslationParser is added
to allow preprocessing and parsing wikitext into a JSON object.

Bug: T310909
Change-Id: I3d3ac44de33edfbe7f1df59508616183c4d29146

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,9 @@
 		"wikimedia/jquery",
 		"wikimedia/mediawiki"
 	],
+	"globals": {
+		"QUnit": "readonly"
+	},
 	"rules": {
 		"no-jquery/no-global-selector": "off"
 	}
