--- a/modules/.eslintrc.json
+++ b/modules/.eslintrc.json
@@ -1,6 +1,7 @@
 {
 	"rules": {
 		"no-implicit-globals": "off",
-		"no-jquery/no-extend": "warn"
+		"no-jquery/no-extend": "warn",
+		"es-x/no-object-assign": "warn"
 	}
 }
