--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
 	"require-dev": {
+		"ext-bcmath": "*",
 		"mediawiki/mediawiki-codesniffer": "45.0.0",
 		"mediawiki/mediawiki-phan-config": "0.15.1",
 		"mediawiki/minus-x": "1.1.3",
