--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,6 @@
 {
 	"root": true,
 	"extends": [
-		"wikimedia/client-es5",
-		"wikimedia/jquery",
-		"wikimedia/mediawiki"
-	],
-	"globals": {
-		"QUnit": "readonly"
-	},
-	"rules": {
-		"no-jquery/no-global-selector": "off"
-	}
+		"wikimedia/server"
+	]
 }
