--- a/modules/.eslintrc.json
+++ b/modules/.eslintrc.json
@@ -1,5 +1,12 @@
 {
+	"root": true,
+	"extends": [
+		"wikimedia/client-es5",
+		"wikimedia/jquery",
+		"wikimedia/mediawiki"
+	],
 	"rules": {
+		"no-jquery/no-global-selector": "off",
 		"no-implicit-globals": "off",
 		"no-jquery/no-extend": "warn",
 		"es-x/no-object-assign": "warn"
