--- a/modules/.eslintrc.json
+++ b/modules/.eslintrc.json
@@ -1,14 +1,15 @@
 {
 	"root": true,
 	"extends": [
-		"wikimedia/client-es5",
+		"wikimedia/client",
 		"wikimedia/jquery",
 		"wikimedia/mediawiki"
 	],
+	"env": {
+		"commonjs": true
+	},
 	"rules": {
 		"no-jquery/no-global-selector": "off",
-		"no-implicit-globals": "off",
-		"no-jquery/no-extend": "warn",
-		"es-x/no-object-assign": "warn"
+		"prefer-const": "warn"
 	}
 }
