ESLint: Manually fix prefer-const violations
Change-Id: I56fa6834934608331f6ad6df6b4526e59b70565a

--- a/modules/.eslintrc.json
+++ b/modules/.eslintrc.json
@@ -9,7 +9,6 @@
 		"commonjs": true
 	},
 	"rules": {
-		"no-jquery/no-global-selector": "off",
-		"prefer-const": "warn"
+		"no-jquery/no-global-selector": "off"
 	}
 }
