build: Updating dependencies
composer:
* mediawiki/mediawiki-codesniffer: 46.0.0 → 47.0.0
  The following sniffs are failing and were disabled:
  * Generic.Files.LineLength.TooLong

npm:
* eslint-config-wikimedia: 0.28.2 → 0.29.1
  The following rules are failing and were disabled:
  * modules:
    * no-jquery/no-done-fail
  * tests/qunit:
    * no-jquery/no-done-fail

Change-Id: Ia3b234bf17bf40f68cce4fa6d9b6d58eab8f96de

--- a/modules/.eslintrc.json
+++ b/modules/.eslintrc.json
@@ -9,6 +9,7 @@
 		"commonjs": true
 	},
 	"rules": {
-		"no-jquery/no-global-selector": "off"
+		"no-jquery/no-global-selector": "off",
+		"no-jquery/no-done-fail": "warn"
 	}
 }
